fix layout bugs

--- a/src/styles/_04-objects.bgs.scss
+++ b/src/styles/_04-objects.bgs.scss
@@ -36,7 +36,6 @@
   background-repeat: no-repeat;
   background-position: 50% 100%;
   background-size: 900px 180px;
-  background-attachment: fixed;
   &:after,
   &:before {
     content: '';
