--- a/src/styles/_04-objects.page.scss
+++ b/src/styles/_04-objects.page.scss
@@ -19,3 +19,25 @@
 .section--small {
   max-width: 500px;
 }
+
+.footer {
+  margin-top: 75px;
+  padding: 75px 0;
+  background: #444444;
+  color: rgba(white, 0.6);
+  font-weight: 100;
+  @include media-query(palm) {
+    margin-top: 0;
+  }
+  position: relative;
+  &:after {
+    top: -15px;
+    left: 0;
+    background-image: url('/static/img/serrated-top-grey.svg');
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 15px;
+    background-repeat: repeat-x;
+  }
+}
